# DINO-QPM

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml
architectures/: FinalLayer.py  model_mapping.py  registry.py  resnet.py
architectures/qpm_dino/: dino_model.py  layers.py  load_model.py  pre_pooling_transform.py  similarity_functions.py
configs/: conf_getter.py  config_validation.py  dataset_params.py  general_config.yaml  hp_sweep_params.py  qpm_training_params.py  qsenn_training_params.py  runtime_paths.py
dino_qpm/architectures/: FinalLayer.py  SLDDLevel.py  model_mapping.py  resnet.py
dino_qpm/configs/: conf_getter.py  dataset_params.py  main_training.yaml  qsenn_training_params.py  seeds.yaml
dino_qpm/dataset_classes/: aircraft.py  cub200.py  fitzpatrick.py  get_data.py  stanfordcars.py  travelingbirds.py
dino_qpm/evaluation/: deprecated.py  diversity.py  load_model.py  main.py  metric_registry.py  qpm_metrics.py  qsenn_metrics.py  utils.py
dino_qpm/ext_models/: helpers.py
dino_qpm/finetuning/: map_function.py  qpm.py  qsenn.py  sldd.py
dino_qpm/helpers/: convergence.py  (+13 more)
ext_models/: helpers.py
finetuning/: base.py  map_function.py  qpm.py  qsenn.py  sldd.py
helpers/: cub_attributes.py  data.py  hp_sweep.py  img_tensor_arrays.py  main_utils.py  optimize.py
inference/: main.py
posttraining/: aggregate_results.py  aggregate_results_new.py
sparsification/: FeatureSelection.py  feature_helpers.py  glmBasedSparsification.py  qpm_sparsification.py  qsenn.py  sldd.py  utils.py
training/: main.py  optim.py  train.py
(+279 files in other folders)
