[project]
name = "dino_qpm"
version = "0.1.0"
authors = [
    {name = "Robert Zimmermann", email = "zimmerro@tnt.uni-hannover.de"}
]

description = "Code for the Paper 'DINO-QPM: Adapting Visual Foundation Models for Globally Interpretable Image Classification'"

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
